unpackaged/main/default/objects/sfsp__SalesActivity__c/sfsp__SalesActivity__c.object-meta.xml
<CustomObject>
    <label>Sales Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>