unpackaged/main/default/objects/sfsp__SalesActivity__c/fields/sfsp__Data__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Data__c</fullName>
    <description>JSON formatted supplemental data</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>