unpackaged/main/default/objects/sfsp__SalesActivity__c/fields/sfsp__RecordType__c.field-meta.xml
<CustomField>
    <fullName>sfsp__RecordType__c</fullName>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>