unpackaged/main/default/objects/sfsp__SalesActivity__c/fields/sfsp__SalesNode__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Node</label>
    <referenceTo>sfsp__SalesNode__c</referenceTo>
    <relationshipLabel>Sales Node Activities</relationshipLabel>
    <relationshipName>SalesNodeActivities</relationshipName>
    <type>Lookup</type>
</CustomField>