unpackaged/main/default/objects/sfsp__SalesActivity__c/fields/sfsp__Subtype__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Subtype__c</fullName>
    <label>Sales Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>