unpackaged/main/default/objects/sfsp__SalesActivity__c/fields/sfsp__Type__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Type__c</fullName>
    <label>Sales Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
                <default>true</default>
                <label>Management</label>
            </value>
            <value>
                <fullName>ApprovalProcess</fullName>
                <label>Approval Process</label>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>